bug(long names): handle really long event and center names
truncate image alt values for events and centers
break long center names on a center's page

[finishes #158334161]

--- a/client/css/centers.module.css
+++ b/client/css/centers.module.css
@@ -191,3 +191,7 @@ a, a:link, a:visited, a:active {
   font-size: 50px;
   padding: 20px;
 }
+.center-detail-name {
+  font-size: 50px;
+  word-break: break-all;
+}
